* Added support for meridional/zonal wind speed, and planetary boundary layer
  height variables.

* Add derivations between wind speed/direction and zonal/meridional velocity.

* Updates to S5P L2, GOME/GOME-2 L2, and ECMWF GRIB product ingestions.

1.3 2018-07-05
~~~~~~~~~~~~~~

* Added bin_spatial() operation.

* Improved binning operation to automatically filter for NaN values and add
  variable-specific count variables to specify the number of non-NaN values.

* Performing a binning operation on top of a binning operation will propagate
  averages based on the available count variables (i.e. as if the final bin was
  performed on the original data).

* Entries added to the global 'history' attribute now also include the current
  utc time and harp version before the execution command.

* Allow NULL as argument for harp_variable_set_description() and
  harp_variable_set_unit() to clear the current description/unit.

* Added harp_product_bin_spatial() and harp_variable_copy_attributes()
  functions.

* Added optional parameter to regrid() operation to specify the axis boundaries.

* Python harp.import_product() now ignores empty products when ingesting a list
  of products.

* Added derivations:
  - column vmr/mmr from column density ratios
  - total column mass density from surface pressure and pressure profile
  - mass mixing ratio from mass density
  - between dry air and total air mass (column) density
  - between dry air, total air, and H2O number densities

* Fixed derivation of altitude from gph/latitude.

* Updates to S5P L2 and MIPAS L2 product ingestions.

1.2 2018-04-09
~~~~~~~~~~~~~~

* Allow data compression for HDF5 output:
  - Added harp_set_option_hdf5_compression() and
    harp_get_option_hdf5_compression() functions to C library.
  - Added --hdf5-compression option to harpconvert and harpmerge.
  - Added hdf5_compression parameter to harp.export_product() Python function.

* Allow regrid() operation to interpolate in the time dimension.
