@@ -319,7 +319,7 @@
 </li>
       <li><a href="libharp_documentation.html#_CPPv237harp_doc_export_ingestion_definitionsPKc">harp_doc_export_ingestion_definitions (C++ function)</a>
 </li>
-      <li><a href="libharp_documentation.html#_CPPv225harp_doc_list_conversionsPK12harp_productPFiPKczE">harp_doc_list_conversions (C++ function)</a>
+      <li><a href="libharp_documentation.html#_CPPv225harp_doc_list_conversionsPK12harp_productPKcPFiPKczE">harp_doc_list_conversions (C++ function)</a>
 </li>
       <li><a href="libharp_general.html#_CPPv29harp_donev">harp_done (C++ function)</a>
 </li>
