@@ -223,6 +223,9 @@
                 <span class="n">of</span> <span class="n">an</span> <span class="o">&lt;</span><span class="n">option</span> <span class="n">name</span><span class="o">&gt;=&lt;</span><span class="n">value</span><span class="o">&gt;</span> <span class="n">pair</span><span class="o">.</span> <span class="n">An</span> <span class="n">option</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span>
                 <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
 
+             <span class="o">-</span><span class="n">t</span><span class="p">,</span> <span class="o">--</span><span class="n">target</span> <span class="o">&lt;</span><span class="n">variable_name</span><span class="o">&gt;</span>
+                <span class="n">Only</span> <span class="n">show</span> <span class="n">derivations</span> <span class="n">that</span> <span class="n">produce</span> <span class="n">the</span> <span class="n">given</span> <span class="n">variable</span><span class="o">.</span>
+
     <span class="n">harpdump</span> <span class="o">-</span><span class="n">h</span><span class="p">,</span> <span class="o">--</span><span class="n">help</span>
         <span class="n">Show</span> <span class="n">help</span> <span class="p">(</span><span class="n">this</span> <span class="n">text</span><span class="p">)</span><span class="o">.</span>
 
